Bug 508910 - 5.3 Nightly crashes when closing a document
Summary: 5.3 Nightly crashes when closing a document
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-08-29 22:52 UTC by AppTest
Modified: 2025-09-04 00:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description AppTest 2025-08-29 22:52:28 UTC
SUMMARY
5.3 Nightly crashes when closing a document

STEPS TO REPRODUCE
1.  Install 5.3 nightly
2. Start a new drawing
3. Go to File, Close/Close All

OBSERVED RESULT
Krita crashes

EXPECTED RESULT
For the drawing to close without crashing

SOFTWARE/OS VERSIONS
krita-arm64-v8a-5.3.0-prealpha-6df0e740-nightly.apk

(August 29, 2025)

Android 16
Comment 1 Freya Lupen 2025-08-30 00:21:17 UTC
Confirmed.
The new Selection Actions Bar (https://invent.kde.org/graphics/krita/-/merge_requests/2422) crashes in KisSelectionActionsPanel::eventFilter(QObject*, QEvent*) + 52 > (kis_selection_actions_panel.cpp:146) trying to access the canvas while the canvas is being deleted (regardless of the Selections Action Bar being enabled).
Comment 2 Freya Lupen 2025-09-04 00:16:06 UTC
Git commit fca688d07d5f13eec97cdee13d623b3a6c891f02 by Freya Lupen.
Committed on 04/09/2025 at 00:14.
Pushed by freyalupen into branch 'master'.

Fix crash closing doc with selection bar active
Related: bug 509054

M  +4    -5    libs/ui/kis_selection_actions_panel.cpp

https://invent.kde.org/graphics/krita/-/commit/fca688d07d5f13eec97cdee13d623b3a6c891f02