Fix crash closing doc with selection bar active

BUG:508910
BUG:509054